# jugaadu-jobs-scraper

./: .gitignore  alembic.ini  fetch.js  main.py  naukri.db  pyproject.toml
migrations/: env.py
src/: fetch_jobs.py  logging_config.py  process_jobs.py  request_naukri.py  utils.py
src/datatypes/: job.py
src/db/: models.py  setup.py
src/db/models/: base.py  naukri.py  tracker.py
src/exceptions/: __init__.py  database.py  http.py
src/repository/: naukri.py  tracker.py
