[project]
name = "naukri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "greenlet>=3.2.2",
    "httpx>=0.28.1",
    "ruff>=0.11.11",
    "sqlalchemy>=2.0.41",
]

[tool.ruff]
src = ["src"]
line-length = 100
extend-select = ["I", "N", "UP"]
