[project]
name = "naukri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.1",
    "greenlet>=3.2.2",
    "httpx>=0.28.1",
    "ruff>=0.11.11",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = ["black>=25.1.0"]

[tool.ruff]
lint.extend-select = ['ALL']
# select = ["E", "F", "I"]
lint.ignore = ['D103', 'W291', 'COM812', 'D104', 'D100', 'ERA001']
